# knowledge-based-minesweeper-ai

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: checks.yml  pages.yml
docs/: README.md  architecture.md  demo.md  design-notes.md  reasoning.md  roadmap.md
docs/reviews/: portfolio-readiness.md  project-readiness.md  technical-review.md
examples/: reasoning_trace.py  simulate_game.py  web_server.py
src/minesweeper_ai/: __init__.py  agent.py  board.py  sentence.py  session.py  trace.py  types.py  web_adapter.py
tests/: test_agent.py  test_board.py  test_package_exports.py  test_sentence.py  test_session.py  test_trace.py  test_web_adapter.py
ui/api/: app.js  index.html  styles.css
ui/web/: app.js  index.html  styles.css
